--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,6 +28,7 @@ android {
     namespace = "com.example.onnx_ocr_plugin"
 
     compileSdk = 35
+    ndkVersion = "27.0.12077973"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_11
