--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,6 +51,7 @@ android {
     dependencies {
         implementation("com.microsoft.onnxruntime:onnxruntime-android:latest.release")
         implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
+        implementation("androidx.exifinterface:exifinterface:1.3.7")
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
     }
